Nepomuk Config: Ignore cases when there is no mount point

In some cases the mount point is empty. We do not want to store records
for those cases under their own group as that would intefere with the
genreal list of include/exclude folders.

The people affected by this bug should clear their nepomukstrigirc file.

Patch by Franz Fellner <alpine.art.kde@googlemail.com>

BUG: 314980
FIXED-IN: 4.10.1